# metnum

./: .gitignore  CMakeLists.txt  README.md
include/: metnum.hpp  metnum_integr.hpp  metnum_interp.hpp
src/: common.cpp  common.hpp  diffeq.cpp  diffeq.hpp  eqsolver.cpp  eqsolver.hpp  example_1.cpp  integr.cpp  integr.hpp  interp.cpp  interp.hpp  main.cpp  metnum.hpp  metnum_integr.cpp  metnum_interp.cpp  rootfinder.cpp  rootfinder.hpp
